--- a/procedure/code/01-R-markdown.Rmd
+++ b/procedure/code/01-R-markdown.Rmd
@@ -289,16 +289,18 @@ if (!file.exists(here('data','raw','public','acs_censusblock.gpkg')) & !file.exi
   
   t_intersection_indeces <- st_intersects(st_as_sf(acs_t), holc_polygons_fixed)
   
-  holc_polygons_fixed <- holc_polygons_fixed |>
-    group_by(area_id,city,state,city_survey,category,grade,label,residential,commercial,industrial,fill) |>
-    summarize(geom = st_union(geom))
-  
   cb_non_empty_indeces <- which(lengths(cb_intersection_indeces) > 0)
   cb_intersects <- acs_cb[cb_non_empty_indeces, ]
   
   t_non_empty_indeces <- which(lengths(t_intersection_indeces) > 0)
   t_intersects <- acs_cb[t_non_empty_indeces, ]
 }
+```
+
+```{r rejoin-holc}
+holc_polygons_fixed <- holc_polygons_fixed |>
+    group_by(area_id,city,state,city_survey,category,grade,label,residential,commercial,industrial,fill) |>
+    summarize(geom = st_union(geom))
 ```
 
 ```{r write-census-public}
@@ -324,11 +326,120 @@ Choosing individual HOLC polygons as the study's resolution increases the threat
 
 First, remap ACS values from block groups to HOLC polygons through areal interpolation, likely actually area-weighted reaggregation. 
 
+```{remap values}
+ACS <- ACS |>
+  mutate(area = st_area())
+
+HOLC <- HOLC |>
+  mutate(area = st_area())
+
+ACS_clipped <- st_intersection(ACS, HOLC) |>
+  mutate(area_clipped = st_area())
+
+ACS_clipped <- ACS |>
+  st_intersection(HOLC) |>
+  mutate(area_clipped = st_area()) |>
+  select(fips, area_clipped) |>
+  st_drop_geometry()
+
+ACS_combined <- left_join(ACS, ACS_clipped, by = "GeoID")
+ACS_scaled <- ACS_combined|>
+mutate(area_ratio = area/area_clipped)|>
+mutate(V1 = V1/area_ratio,
+       V2 = V2 ...
+       )
+
+ACS_for_joining <- st_join(ACS_combined, HOLC[, holc_id], join = st_intersects)
+HOLC_aggregated <- ACS_for_joining|>
+groupby(HOLC$someidentifier)|>
+summarise(total_V1 = sum(V1, na.rm = TRUE),
+total_V2 = sum(V1, na.rm = TRUE), 
+...
+)
+
+```
+
 Using census statistics from the ACS dataset, resulting calculated assigned variables are: Black Population %, White Population %, Indigenous American %, Asian  Population %, Hispanic or Latino Population %, % Below Poverty Line, % Housing Units Owned, % Housing Units Rented, % Mobile Homes, % Homes before 1980, % Homes after 1980, % With Complete Plumbing, % With Incomplete Plumbing, and % Foreign Born. This data is separated by region as well as collected nationally. Using regional and national averages for plumbing rates, a binary variable is calculated on whether plumbing is below or above the average.
 
-This data can then be verified with the Supplementary Data Tables.
+```{bianary creation}
+HOLC_aggregated <- HOLC_aggregated |>
+  mutate(
+    water_access = case_when(
+      `% With Incomplete Plumbing` > 2.61668 ~ 1,
+      TRUE ~ 0
+    )
+  )
+
+data_clean <- HOLC_aggregated |>
+  select(
+    holc_id,
+    holc_grade
+    neighborho,
+    area_descr,
+    `Black Population %`,
+    `White Population %`,
+    `Indigenous American %`,
+    `Asian Population %`,
+    `Hispanic or Latino Population %`,
+    `% Below Poverty Line`,
+    `% Housing Units Owned`,
+    `% Housing Units Rented`,
+    `% Mobile Homes`,
+    `% Homes before 1980`,
+    `% Homes after 1980`,
+    `% With Complete Plumbing`,
+    `% With Incomplete Plumbing`,
+    `% Foreign Born`,
+    Shape_Area,
+    water_access
+  )
+
+```
+
+Data will now be verified using the supplementary tables by subtracting them from the calculated data, which should result in zeros across the board. 
+This is somewhat of a test of whether the authors actually did in fact use area weighted reaggregation or areal interpolation; if they used AWI, our results should match.
+Additionally, because the reaggregation was done in a Python package this will test the similarities/differences of our implementation. 
+
+This is somewhat of a test of whether the authors actually did in fact use area weighted reaggregation or areal interpolation; if they used AWI, our results should match.
+Additionally, because the reaggregation was done in a Python package this will test the similarities/differences of our implementation. 
+
+The chosen method to test the accuracy of the data is to compare it to the regional summary statistics, presented in table 1 (results/tables/original/table_1.csv). I'll split data_clean rows into regions, 
+calculate summary stats for them, compile into a single df, and then subtract them from table 1. 
+
+```{test AWI}
+sd_midwest<- read_csv("data/derived/public/original/sd_midwest.csv")
+sd_northeast<- read_csv("data/derived/public/original/sd_northeast.csv")
+sd_south<- read_csv("data/derived/public/original/sd_south.csv")
+sd_west<- read_csv("data/derived/public/original/sd_west.csv")
+
+sd_midwest_testing <- sd_midwest[, 2:ncolumn(sd_midwest)]
+sd_midwest_testing <- sd_northeast[, 2:ncolumn(sd_northeast)]
+sd_midwest_testing <- sd_south[, 2:ncolumn(sd_south)]
+sd_midwest_testing <- sd_west[, 2:ncolumn(sd_west)]
+
+
+
+data_test <- data_clean %>% select(-holc_grade)
+test1<- data_test-national_testing
+
+kbl(test1) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive")) %>%
+  column_spec(1, bold = TRUE) %>%
+  scroll_box(width = "100%", height = "400px")
+```
 
 Then, use the Dunn Test to determine whether incomplete plumbing % in Grade A is significantly different than the other Grades and compared with supplementary table 1.
+
+```{dunn test}
+Dunntest<- dunnTest(`% With Incomplete Plumbing` ~ holc_grade, data = data_clean) #dunn test
+original_dunn_results<- st_read("results/tables/original/table_s1.csv")
+test2<- (Dunntest - original_dunn_results) #subtracting for comparison
+
+kbl(test2) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive")) %>%
+  column_spec(1, bold = TRUE) %>%
+  scroll_box(width = "100%", height = "400px")
+```
 
 Using a Stepwise function with the $StepAIC$ package and the HOLC Grade A as a reference group, we can gather a correlation table to remove the highest correlation values. In this case, the highest correlation value will be removed, and compared with supplementary table 2.
 
