testing with supplementary data

--- a/software.bib
+++ b/software.bib
@@ -15,12 +15,36 @@
   url = {https://here.r-lib.org/},
 }
 
+@Manual{R-kableExtra,
+  title = {kableExtra: Construct Complex Table with kable and Pipe Syntax},
+  author = {Hao Zhu},
+  year = {2024},
+  note = {R package version 1.4.0},
+  url = {http://haozhu233.github.io/kableExtra/},
+}
+
+@Manual{R-knitr,
+  title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
+  author = {Yihui Xie},
+  year = {2025},
+  note = {R package version 1.50},
+  url = {https://yihui.org/knitr/},
+}
+
 @Manual{R-margins,
   title = {margins: Marginal Effects for Model Objects},
   author = {Thomas J. Leeper},
   year = {2024},
   note = {R package version 0.3.28},
   url = {https://github.com/bbolker/margins},
+}
+
+@Manual{R-MASS,
+  title = {MASS: Support Functions and Datasets for Venables and Ripley's MASS},
+  author = {Brian Ripley and Bill Venables},
+  year = {2025},
+  note = {R package version 7.3-65},
+  url = {http://www.stats.ox.ac.uk/pub/MASS4/},
 }
 
 @Manual{R-sf,
@@ -54,6 +78,38 @@ sf-Ready Data Frames},
   year = {2024},
   note = {R package version 2.1},
   url = {https://github.com/walkerke/tigris},
+}
+
+@Book{knitr2015,
+  title = {Dynamic Documents with {R} and knitr},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2015},
+  edition = {2nd},
+  note = {ISBN 978-1498716963},
+  url = {https://yihui.org/knitr/},
+}
+
+@InCollection{knitr2014,
+  booktitle = {Implementing Reproducible Computational Research},
+  editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
+  title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  year = {2014},
+  note = {ISBN 978-1466561595},
+}
+
+@Book{MASS2002,
+  title = {Modern Applied Statistics with S},
+  author = {W. N. Venables and B. D. Ripley},
+  publisher = {Springer},
+  edition = {Fourth},
+  address = {New York},
+  year = {2002},
+  note = {ISBN 0-387-95457-0},
+  url = {https://www.stats.ox.ac.uk/pub/MASS4/},
 }
 
 @Book{sf2023,
